<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeightConverterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_from_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/weight_hint"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/conversion_result_frame_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_from_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_conversion_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rb_option_lbs_to_kg"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/weight_from_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/conversion_result_frame_layout"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_option_lbs_to_kg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lbs_to_kg_conversion" />

        <RadioButton
            android:id="@+id/rb_option_kg_to_lbs"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/kg_to_lbs_conversion" />

    </RadioGroup>
    <Button
        android:id="@+id/convert_button"
        style="@style/Widget.Massform.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/convert_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@id/conversion_result_frame_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/conversion_result_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/conversion_result_text_view"
            style="@style/Widget.Massform.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="100sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>