<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/workout_a_option_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/workout_a_option_image_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/workout_a_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Widget.Massform.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/workout_a_option_textview"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/workout_a_option_image_view"/>

            <Button
                android:id="@+id/workout_a_option_button"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/workout_string_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workout_a_option_image_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/workout_b_option_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/workout_b_option_image_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/workout_b_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Widget.Massform.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/workout_b_option_textview"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workout_b_option_image_view"/>

            <Button
                android:id="@+id/workout_b_option_button"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/workout_string_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workout_b_option_image_view"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/weight_converter_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/weight_converter_option_image_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/weight_conversion_image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Widget.Massform.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/weight_converter_option_textview"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weight_converter_option_image_view" />

            <Button
                android:id="@+id/weight_converter_option_button"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"

                android:text="@string/weight_converter_string_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weight_converter_option_image_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>